# pwa3-mod

./: .gitignore  CMakeLists.template.txt  CMakeLists.txt  CMakePresets.json  GameLogic.def  README.md
src/: commands_registry.cpp  commands_registry.h  detours.cpp  detours.h  dllmain.cpp  dllmain.h  events.h  events_manager.cpp  events_manager.h  memory.cpp  memory.h
src/sdk/: GameLogic.h
src/utils/: logger.cpp  logger.h  singleton.h
